Both components now correctly overflow when the list has many entries, item-contents now span the whole item width

--- a/frontend/carpool-app/src/components/ReviewsDisplay.scss
+++ b/frontend/carpool-app/src/components/ReviewsDisplay.scss
@@ -1,31 +1,36 @@
 @import '../global.scss';
-// #50c8ff
+
 .review-display-container {
     @include display-flex-center("both");
     width: 100%;
     flex-direction: column;
     background-color: #F0F0F0;
     border-radius: 10px;
+    padding-bottom: 0.4rem;
+    max-width: 25rem;
 
     .reviews-list{
         width: 100%;
-        padding: 0 0.1rem 0.3rem 0.1rem;
+        padding: 0 0.1rem 0 0.1rem;
         border-radius: 4px; 
         overflow: hidden;
+        overflow-y: auto;
+        max-height: 15rem;
         ion-list{
             @include display-flex-center('both');
-            flex-direction: column;
             background-color: #F0F0F0;
+            flex-direction: column;
             border-radius: 4px;
             padding: 0;
             ion-item{
                 width: 95%;
                 margin: 0.1rem 0;
                 border-radius: 4px;
-                // text-align: center;
+                text-align: center;
 
                 .item-contents{
                     @include display-flex-center('both');
+                    width: 100%;
                     text-align: center;
                     flex-direction: column;
                 }
