--- a/frontend/carpool-app/src/components/TripsDisplay.scss
+++ b/frontend/carpool-app/src/components/TripsDisplay.scss
@@ -7,6 +7,7 @@
     background-color: #F0F0F0;
     border-radius: 10px;
     padding-bottom: 0.4rem;
+    max-width: 25rem;
 
     .trips-list{
         width: 100%;
@@ -15,6 +16,7 @@
         overflow: hidden;
         overflow-y: auto;
         max-height: 15rem;
+
         ion-list{
             @include display-flex-center('both');
             background-color: #F0F0F0;
@@ -28,6 +30,7 @@
                 text-align: center;
 
                 .item-contents{
+                    width: 100%;
                     @include display-flex-center('both');
                     text-align: center;
                     flex-direction: column;
